helper/version-watcher/src/main/kube/deploy.envsubst.yaml
---

# Deployment descriptor
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: "version-watcher"
    app.kubernetes.io/component: "version-watcher"
    app.kubernetes.io/part-of: "version-watcher"
    app.kubernetes.io/instance: "version-watcher-main"
    app.kubernetes.io/version: "1.0.0"
  name: "version-watcher"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "version-watcher"
      app.kubernetes.io/component: "version-watcher"
      app.kubernetes.io/part-of: "version-watcher"
      app.kubernetes.io/instance: "version-watcher-main"
      app.kubernetes.io/version: "1.0.0"
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path:  "/q/metrics"
      labels:
        app.kubernetes.io/name: "version-watcher"
        app.kubernetes.io/component: "version-watcher"
        app.kubernetes.io/part-of: "version-watcher"
        app.kubernetes.io/instance: "version-watcher-main"
        app.kubernetes.io/version: "1.0.0"
    spec:
      containers:
      - name: version-watcher
        image: "${localregistry}/version-watcher:1.0.0"
        imagePullPolicy: "Always"
        livenessProbe:
          httpGet:
            path: "/q/health/live"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 0
          successThreshold: 1
          periodSeconds: 3
          failureThreshold: 10 
        readinessProbe:
          httpGet:
            path: "/q/health/ready"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 0
          successThreshold: 1
          periodSeconds: 3
          failureThreshold: 10 
        resources:
          limits:
            cpu: "1.0"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "128Mi"
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/deployments/tls"
          name: "tls-secret-volume"
          readOnly: true
        - mountPath: "/deployments/config"
          name: "prop-secret-volume"
          readOnly: true
      volumes:
      - name: "tls-secret-volume"
        secret:
          defaultMode: 420
          secretName: "version-watcher-tls-secret"
      - name: "prop-secret-volume"
        secret:
          defaultMode: 420
          secretName: "version-watcher-prop-secret"
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/name: "version-watcher"
    app.kubernetes.io/component: "version-watcher"
    app.kubernetes.io/part-of: "version-watcher"
    app.kubernetes.io/instance: "version-watcher-main"
    app.kubernetes.io/version: "1.0.0"
  name: "version-watcher"
spec:
  type: ClusterIP
  ports:
  - name: "http"
    port: 8080
    protocol: "TCP"
    targetPort: 8080
  selector:
    app.kubernetes.io/name: "version-watcher"
    app.kubernetes.io/component: "version-watcher"
    app.kubernetes.io/part-of: "version-watcher"
    app.kubernetes.io/instance: "version-watcher-main"
    app.kubernetes.io/version: "1.0.0"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: version-watcher
  labels:
    app.kubernetes.io/name: "version-watcher"
    app.kubernetes.io/component: "version-watcher"
    app.kubernetes.io/part-of: "version-watcher"
    app.kubernetes.io/instance: "version-watcher-main"
    app.kubernetes.io/version: "1.0.0"
  annotations:
spec:
  rules:
  - host: version-watcher.${kube_ingress_root_domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: version-watcher
            port:
              number: 8080
---
